--- a/Index.html
+++ b/Index.html
@@ -2,11 +2,75 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Instagram Feed</title>
-		<link rel="stylesheet" href="styles.css" />
+		<link
+		href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+		rel="stylesheet"
+		integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+		crossorigin="anonymous"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+		href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+		rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./styles.css" />
+		<title>Instagram feed bootstrap</title>
 	</head>
     <body>
-        
+		<nav class="navbar">
+			<div class="container-fluid">
+			  <a class="navbar-brand" href="#">
+				<img src="https://cdn-icons-png.flaticon.com/128/733/733558.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+				Instagram
+			  </a>
+			  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Open modal for @getbootstrap</button>
+			  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+				  <div class="modal-content">
+					<div class="modal-header">
+					  <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+					  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+					  <form>
+						<div class="mb-3">
+						  <label for="recipient-name" class="col-form-label">Recipient:</label>
+						  <input type="text" class="form-control" id="recipient-name">
+						</div>
+						<div class="mb-3">
+						  <label for="message-text" class="col-form-label">Message:</label>
+						  <textarea class="form-control" id="message-text"></textarea>
+						</div>
+					  </form>
+					</div>
+					<div class="modal-footer">
+					  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					  <button type="button" class="btn btn-primary">Send message</button>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="btn-group pe-4">
+				<button
+				  class="btn dropdown-toggle p-2"
+				  type="button"
+				  id="defaultDropdown"
+				  data-bs-toggle="dropdown"
+				  data-bs-auto-close="true"
+				  aria-expanded="false"
+				>
+				  <img class="menu" src="https://t3.ftcdn.net/jpg/02/97/90/18/240_F_297901867_0C7uB7AvwcY08GONDEdwzrTdq1nOyGtp.jpg" />
+				</button>
+				<ul class="dropdown-menu dropdown-menu-lg-end">
+				  <li><a class="dropdown-item" href="#">Menu item</a></li>
+				  <li><a class="dropdown-item" href="#">Menu item</a></li>
+				  <li><a class="dropdown-item" href="#">Log out</a></li>
+				</ul>
+			  </div>
+			</div>
+		  </nav>
     </body>
 </html>
